--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,47 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-Black.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-Regular.ttf') format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+/* 
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-BlackItalic.ttf') format('truetype');
+  font-stlye: italic;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-Italic.ttf') format('truetype');
+  font-stlye: italic;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Playfair Display SC';
+  src: url('/fonts/PlayfairDisplaySC-BoldItalic.ttf') format('truetype');
+  font-stlye: italic;
+  font-weight: 700;
+} */
+
+
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -111,6 +152,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* font PlaifairDisplay */
+  --font-playfair-display-sc: 'Playfair Display SC', serif;
 }
 
 @layer base {
